Disable unused checks for lint
Only specify linters to turn on

Set fetch depth to 0

Removed specific file name references

Fix and Ignore Lint Issues

Fix lint issues in wather API

Fxing general lint errors from workflow

Fix lint issues in wather_api

Fix import order and to few public classes weather api

Ignore line to long main.py

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,10 +17,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0  # Fetch all history for accurate linting
+          
       - name: Run Super-Linter
         uses: github/super-linter@v7
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_ALL_CODEBASE: true
+          # Only enable specific linters (don't mix enable/disable)
           VALIDATE_PYTHON: true
+          VALIDATE_PYTHON_PYLINT: true
+          VALIDATE_PYTHON_FLAKE8: true
+          # Use default linter configurations
