--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,11 +12,15 @@ jobs:
 
     env:
       REPOSITORY_OWNER: ${{ github.repository_owner }}
+      # Add this to suppress some warnings
+      DOCKER_BUILDKIT: 1
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Fetch all history for accurate linting
+        
     - name: Convert repository owner to lowercase
       run: echo "REPOSITORY_OWNER=$(echo $REPOSITORY_OWNER | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
@@ -39,5 +43,8 @@ jobs:
         context: .
         push: true
         tags: ghcr.io/${{ env.REPOSITORY_OWNER }}/weather-cli-app:latest
+        # Add these options to suppress warnings
         build-args: |
-          WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}
+          BUILDKIT_INLINE_CACHE=1
+        cache-from: type=registry,ref=ghcr.io/${{ env.REPOSITORY_OWNER }}/weather-cli-app:buildcache
+        cache-to: type=registry,ref=ghcr.io/${{ env.REPOSITORY_OWNER }}/weather-cli-app:buildcache,mode=max
