--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,14 @@ on:
     branches:
       - main
   workflow_dispatch:
+  workflow_run:
+    workflows: ["docker-build"]
+    types:
+      - completed
 jobs:
     deploy:
         runs-on: ubuntu-dev
+        if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name != 'workflow_run' }}
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
